kubernetes/monitoring/loki.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loki
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: loki
  template:
    metadata:
      labels:
        app: loki
    spec:
      containers:
        - name: loki
          image: grafana/loki:3.5
          args:
            - --config.expand-env=true
            - --config.file=/etc/loki/loki.yaml
          ports:
            - containerPort: 3100
              protocol: TCP
              name: http
          resources:
            requests:
              cpu: 300m
              memory: 500Mi
            limits:
              cpu: 500m
              memory: 1Gi
          volumeMounts:
            - name: loki-data
              mountPath: /data
            - name: loki-config
              mountPath: /etc/loki
      volumes:
        - name: loki-data
          emptyDir: {}
        - name: loki-config
          configMap:
            name: loki-config
---
apiVersion: v1
kind: Service
metadata:
  name: loki
  namespace: monitoring
spec:
  selector:
    app: loki
  ports:
    - port: 3100
      targetPort: 3100
---
# only allowing loki to push logs to s3
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "loki-egress"
  namespace: monitoring
spec:
  endpointSelector:
    matchLabels:
      app: loki
  egress:
    - toFQDNs:
        - matchName: "kubernetes-loki.s3.eu-central-2.wasabisys.com"
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
          rules:
            dns:
              - matchPattern: "*"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alloy
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alloy
  template:
    metadata:
      labels:
        app: alloy
    spec:
      serviceAccountName: alloy
      containers:
        - name: alloy
          image: grafana/alloy:v1.8.3
          ports:
            - containerPort: 12345
              name: http
            - containerPort: 4318
            - containerPort: 4317
          args:
            - run
            - /etc/alloy/config.alloy
            - --server.http.listen-addr=0.0.0.0:12345
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 500m
              memory: 1Gi
          volumeMounts:
            - name: alloy-config
              mountPath: /etc/alloy
            - name: alloy-data
              mountPath: /var/lib/alloy/data
          livenessProbe:
            httpGet:
              path: /-/healthy
              port: 12345
            initialDelaySeconds: 10
            periodSeconds: 10

      volumes:
        - name: alloy-config
          configMap:
            name: alloy-config
        - name: alloy-data
          persistentVolumeClaim:
            claimName: alloy-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: alloy
  namespace: monitoring
spec:
  selector:
    app: alloy
  ports:
    - name: http
      protocol: TCP
      port: 12345
      targetPort: 12345
    - name: grpc-over-http
      protocol: TCP
      port: 4318
      targetPort: 4318
    - name: grpc
      protocol: TCP
      port: 4317
      targetPort: 4317
